<resources>
    <string name="app_name">MyContacts</string>

    <!--  Buttons of forms  -->
    <string name="add_btn">ADD</string>
    <string name="cancel_btn">Cancel</string>
    <string name="edit_btn">Save Change</string>

    <!--  hints  -->
    <string name="ct_name">contact name</string>
    <string name="ct_number">phone number</string>
    <string name="ct_email">email address</string>
    <string name="ct_fav">favorite contact</string>
    <string name="favorite_star">favorite star</string>
    <string name="contact_image">contact image</string>
    <string name="add_new_title">add a new contact</string>
    <string name="ct_update">Update</string>
    <string name="ct_delete">Delete</string>
</resources>